--- a/assignment-api/pom.xml
+++ b/assignment-api/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>assignment-api</artifactId>
@@ -46,6 +47,22 @@
             <groupId>org.mockito</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.7</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
